--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ img {
     font-size: 26px;
     line-height: 31px;
     color: var(--logo-color);
+    transition: 250ms var(--timing-function)
 }
 
 .logo {
@@ -101,6 +102,7 @@ font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 color: var(--title-text-colors);
+transition: 250ms var(--timing-function);
 }
 
 .contact-nav .link {
@@ -110,7 +112,7 @@ font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 color: var(--primery-color);
-    }
+}
 
 .site-nav .link:hover,  
 .site-nav .link:focus {
@@ -145,7 +147,6 @@ color: var(--primery-color);
 .current::after {
     content: '';
     position: absolute;
-    display: block;
     left: 0;
     bottom: -1px;
     width: 100%;
@@ -192,6 +193,7 @@ margin-left: auto;
     display: flex;
     align-items: center;
     margin-right: 30px;
+    transition: 250ms var(--timing-function)
 }
 
 .icon-mail, .icon-tel {
@@ -323,6 +325,7 @@ color: var(--primery-color);
     margin-bottom: 30px;
     border-radius: 4px;
     height: 120px;
+    transition: 250ms var(--timing-function);
 }
 
 /* Works */
@@ -479,6 +482,7 @@ color: var(--primery-color);
     border-radius: 50%;
     align-items: center;
     justify-content: center;
+    transition: 250ms var(--timing-function);
     }
 
 .command-social-style:not(:last-child) {
@@ -537,6 +541,7 @@ color: var(--primery-color);
     height: 100%;
     border-radius: 4px;
     color: var(--fon-icon);
+    transition: 250ms var(--timing-function);
 }
 
 .client-icon {
@@ -615,7 +620,7 @@ color: var(--primery-color);
     display: flex;
     align-items: center;
     justify-content: center;
-}
+    }
 
 svg .footer-social-svg{
     width: 20px;
@@ -663,7 +668,8 @@ footer .container {
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.1);    
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: 250ms var(--timing-function)    
 }
 
 .footer-social-link:hover,
@@ -692,13 +698,17 @@ footer .container {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: opasity 250ms, cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    z-index: 2;
     }
 
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
-    visibility: visible;
+    visibility: hidden;
     }
 
 .modal {
@@ -706,13 +716,17 @@ footer .container {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-height: 581px;
-    min-width: 528px;
+    height: 581px;
+    width: 528px;
     background-color: var(--hero-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms var(--timing-function);
     }
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%);
+}
 
 .btn {
     display: flex;
@@ -732,10 +746,9 @@ footer .container {
     border-color: var(--accent-color);
     }
 
-.btn-icon:hover {
+.btn:hover {
     fill: var(--accent-color);
 }
-
 
     /* Portfolio */
  
@@ -752,7 +765,7 @@ footer .container {
    text-align: center;
    }
 
-   .knob:not(:last-child) {
+.knob:not(:last-child) {
     margin-right: 8px;
     }
 
@@ -779,10 +792,11 @@ footer .container {
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;
-     }
+    }
 
 .filter-button {
     background-color: var(--fon-color-button);
+    transition: 250ms var(--timing-function);
     }
 
 .filter .filter-button:hover,
@@ -872,11 +886,8 @@ color: var(--primery-color);
 .overlay {
     position: relative;
     overflow: hidden;
-}
-.project-list:hover .overlay-box
-.project-list:focus .overlay-box{
-    transform: translateY(0%);
-}
+    }
+
 .overlay-box {
     position: absolute;
     justify-content: center;
@@ -892,7 +903,12 @@ color: var(--primery-color);
     overflow: auto;
     color: var(--hero-text-color);
     background-color: var(--accent-color);
-    transition: opacity 250ms var(--timing-function);
     transform: translateY(100%);
+    transition: 250ms var(--timing-function);
+}
+
+.project-list:hover .overlay-box,
+.project-list:focus .overlay-box {
+    transform: translateY(0%);
 }
 
