--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,10 @@ img {
     display: block;
 }
 
+p, h1, h2, h3, h4, h5 {
+    margin: 0;
+}
+
 /* Header */
 
 .page-header .container {
@@ -894,6 +898,7 @@ color: var(--primery-color);
     text-align: center;
     top: 0;
     left: 0;
+    margin: 0;
     padding: 63px 24px;
     width: 100%;
     height: 100%;
