--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ p, h1, h2, h3, h4, h5 {
     font-size: 26px;
     line-height: 31px;
     color: var(--logo-color);
-    transition: 250ms var(--timing-function)
+    transition: color 250ms var(--timing-function);
 }
 
 .logo {
@@ -106,7 +106,7 @@ font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 color: var(--title-text-colors);
-transition: 250ms var(--timing-function);
+transition: color 250ms var(--timing-function);
 }
 
 .contact-nav .link {
@@ -158,8 +158,8 @@ color: var(--primery-color);
     border-radius: 2px;
     background-color: var(--accent-color);
     opacity: 0;
-    transition: opacity 250ms var(--timing-function);
     }
+
 .current::after {
         opacity: 1;
     }
@@ -197,7 +197,7 @@ margin-left: auto;
     display: flex;
     align-items: center;
     margin-right: 30px;
-    transition: 250ms var(--timing-function)
+    transition: color 250ms var(--timing-function);
 }
 
 .icon-mail, .icon-tel {
@@ -239,8 +239,6 @@ text-align: center;
     background-position: center;
     }
 
-
- 
 /* Button */
 
 .button-link {
@@ -329,8 +327,7 @@ color: var(--primery-color);
     margin-bottom: 30px;
     border-radius: 4px;
     height: 120px;
-    transition: 250ms var(--timing-function);
-}
+    }
 
 /* Works */
 
@@ -422,7 +419,7 @@ font-weight: 500;
 font-size: 16px;
 line-height: 19px;
 letter-spacing: 0.03em;
- color: var(--title-text-colors);
+color: var(--title-text-colors);
     }
 
 .section-title {
@@ -486,7 +483,7 @@ color: var(--primery-color);
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-    transition: 250ms var(--timing-function);
+    transition: background-color 250ms var(--timing-function);
     }
 
 .command-social-style:not(:last-child) {
@@ -545,21 +542,21 @@ color: var(--primery-color);
     height: 100%;
     border-radius: 4px;
     color: var(--fon-icon);
-    transition: 250ms var(--timing-function);
-}
+    transition: color 250ms var(--timing-function);
+    }
 
 .client-icon {
     width: 106px;
     height: 60px;
     fill: currentColor;
-}
+    }
 
 /* Footer */
 
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
-}
+    }
 
 .logo-item {
     display: inline-block;
@@ -569,53 +566,53 @@ color: var(--primery-color);
     font-size: 26px;
     line-height: 31px;
     color: var(--hero-text-color);
-  }
+    }
 
-  .logo-item {
+.logo-item {
     font-family: 'Raleway', sans-serif;
-      }
+    }
   
-    .web {
-        color: var(--accent-color);
-      }
+.web {
+    color: var(--accent-color);
+    }
 
          /* Adress */
 
-    .adress-live {
+.adress-live {
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     letter-spacing: 0.03em;
     color: var(--hero-text-color);
-      }
+    }
 
-    .contact {
+.contact {
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-     }
+    }
 
-    .footer {
-         background-color: var(--fon-color);
-             }
-    .contact {
-        text-decoration: none;
-            }
+.footer {
+    background-color: var(--fon-color);
+    }
+.contact {
+    text-decoration: none;
+    }
 
-        .contact-list {
-        margin-bottom: 0;
-        padding-left: 0;
-       }
+.contact-list {
+    margin-bottom: 0;
+    padding-left: 0;
+    }
 
-    .mail {
-        margin-bottom: 9px;
-       } 
+.mail {
+    margin-bottom: 9px;
+    } 
 
-    .town-street {
-        margin-top: 0;
-        margin-bottom: 0;
+.town-street {
+    margin-top: 0;
+    margin-bottom: 0;
     }
 
     /* Icon */
@@ -629,12 +626,12 @@ color: var(--primery-color);
 svg .footer-social-svg{
     width: 20px;
     height: 20px;
-}
+    }
 
 footer .container {
     display: flex;
     align-items: baseline;
-}
+    }
 
 .footer-icon {
     display: block;
@@ -654,7 +651,7 @@ footer .container {
     font-style: bold;
     font-size: 14px;
     line-height: 16px;
-}
+    }
 
 .footer-social-icon {
     display: flex;
@@ -673,8 +670,8 @@ footer .container {
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.1);
-    transition: 250ms var(--timing-function)    
-}
+    transition: background-color 250ms var(--timing-function);   
+    }
 
 .footer-social-link:hover,
 .footer-social-link:focus {
@@ -702,9 +699,8 @@ footer .container {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 1;
-    pointer-events: auto;
     visibility: visible;
     z-index: 2;
     }
@@ -719,7 +715,7 @@ footer .container {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
     height: 581px;
     width: 528px;
     background-color: var(--hero-text-color);
@@ -729,8 +725,8 @@ footer .container {
     }
 
 .backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%);
-}
+    transform: translate(-50%, -50%) scale(0.7);
+    }
 
 .btn {
     display: flex;
@@ -744,7 +740,7 @@ footer .container {
     border-radius: 50%;
     background-color: var(--hero-text-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
-}
+    }
 
 .btn:hover {
     border-color: var(--accent-color);
@@ -752,7 +748,7 @@ footer .container {
 
 .btn:hover {
     fill: var(--accent-color);
-}
+    }
 
     /* Portfolio */
  
@@ -760,7 +756,7 @@ footer .container {
 
 .portfolio {
     padding-top: 94px;
-}
+    }
 
 .filter-button {
    display: inline-block;
@@ -800,7 +796,7 @@ footer .container {
 
 .filter-button {
     background-color: var(--fon-color-button);
-    transition: 250ms var(--timing-function);
+    transition: background-color 250ms var(--timing-function);
     }
 
 .filter .filter-button:hover,
@@ -859,7 +855,7 @@ color: var(--primery-color);
 
 .portfolio {
     padding-bottom: 94px;
-}
+    }
 
 .content-list {
     margin-right: 30px;
@@ -869,11 +865,11 @@ color: var(--primery-color);
     
 .content-list:nth-child(3n) {
     margin-right: 0;
-}
+    }
 
 .content-list:nth-last-child(-n + 3) {
     margin-bottom: 0;
-}
+    }
 
 .cards {
     padding-top: 20px;
@@ -909,11 +905,11 @@ color: var(--primery-color);
     color: var(--hero-text-color);
     background-color: var(--accent-color);
     transform: translateY(100%);
-    transition: 250ms var(--timing-function);
-}
+    transition: transform 250ms var(--timing-function);
+    }
 
 .project-list:hover .overlay-box,
 .project-list:focus .overlay-box {
     transform: translateY(0%);
-}
+    }
 
