--- a/css/styles.css
+++ b/css/styles.css
@@ -516,6 +516,7 @@ color: var(--primery-color);
     margin-bottom: 50px;
     margin-top: 0;
     text-align: center;
+    transition: color 250ms var(--timing-function);
 }
 
 .client-item:not(:last-child) {
@@ -641,14 +642,14 @@ footer .container {
     }
 
 .join-title {
-    display: block;
+    display: flex;
     color: var(--hero-text-color);
     margin-right: 0;
     margin-top: 0;
     margin-bottom: 20px;
-    align-items: center;
-    justify-content: center;
-    font-style: bold;
+    letter-spacing: 0.03em;
+    font-weight: bold;
+    font-style: normal;
     font-size: 14px;
     line-height: 16px;
     }
@@ -699,9 +700,10 @@ footer .container {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms var(--timing-function);
     opacity: 1;
     visibility: visible;
+    pointer-events: auto;
     z-index: 2;
     }
 
@@ -711,21 +713,21 @@ footer .container {
     visibility: hidden;
     }
 
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%);
+    }
+
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%);
     height: 581px;
     width: 528px;
     background-color: var(--hero-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transition: transform 250ms var(--timing-function);
-    }
-
-.backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0.7);
+    transition: 250ms var(--timing-function);
     }
 
 .btn {
@@ -763,6 +765,10 @@ footer .container {
    border-radius: 4px;
    padding: 6px 22px;
    text-align: center;
+   letter-spacing: 0.03em;
+    line-height: 1.62;
+    font-weight: 500;
+    color: var(--title-text-colors);
    }
 
 .knob:not(:last-child) {
@@ -772,6 +778,7 @@ footer .container {
 .filter {
     display: flex;
     justify-content: center;
+    font-style: normal;
     margin-bottom: 50px;
     padding-left: 0;
     margin-top: 0;
