--- a/css/styles.css
+++ b/css/styles.css
@@ -461,14 +461,6 @@ color: var(--primery-color);
     justify-content: center;
     }
 
-.command-social-style{
-    display: flex;
-    width: 44px;
-    height: 44px;
-    cursor: pointer;
-    justify-content: center;
-    }
-
 .command-social-icon:hover,
 .command-social-icon:focus {
     background-color: var(--accent-color);
@@ -477,15 +469,16 @@ color: var(--primery-color);
 
 .command-social-icon {
     display: flex;
-    width: 100%;
-    height: 100%;
+    width: 44px;
+    height: 44px;
     fill: var(--fon-icon);
     border-radius: 50%;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
     transition-property: fill, background-color;
     transition-duration: 250ms;
-    transition-timing-function: linear;
+    transition-timing-function: var(--timing-function);
     }
 
 .command-social-style:not(:last-child) {
@@ -544,13 +537,18 @@ color: var(--primery-color);
     height: 100%;
     border-radius: 4px;
     color: var(--fon-icon);
-    transition: color 250ms var(--timing-function);
+    transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
     }
 
 .client-icon {
     width: 106px;
     height: 60px;
     fill: currentColor;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
     }
 
 /* Footer */
@@ -762,11 +760,12 @@ footer .container {
     }
 
 .filter-button {
-   display: inline-block;
-   border-radius: 4px;
-   padding: 6px 22px;
-   text-align: center;
-   letter-spacing: 0.03em;
+    display: inline-block;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    padding: 6px 22px;
+    text-align: center;
+    letter-spacing: 0.03em;
     line-height: 1.62;
     font-weight: 500;
     color: var(--title-text-colors);
@@ -784,14 +783,6 @@ footer .container {
     padding-left: 0;
     margin-top: 0;
     }
-
-.filter .current {
-    color: var(--hero-text-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0 0 0 / 10%),
-    0px 1px 2px rgba(0 0 0 / 8%),
-    0px 2px 2px rgba(0 0 0 / 12%);
-    }   
 
 .filter-button-list {
     color: var(--title-text-colors);
@@ -811,9 +802,9 @@ footer .container {
 .filter .filter-button :focus {
     background-color: var(--accent-color);
     color: var(--hero-text-color);
-    box-shadow: 0px 3px 1px rgba(0 0 0 / 10%),
-    0px 1px 2px rgba(0 0 0 / 8%),
-    0px 2px 2px rgba(0 0 0 / 12%);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
     }
 
     /* Work */
