--- a/css/styles.css
+++ b/css/styles.css
@@ -481,6 +481,12 @@ color: var(--primery-color);
     transition-timing-function: var(--timing-function);
     }
 
+svg {
+    transition-property: fill, background-color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--timing-function);
+    }
+
 .command-social-style:not(:last-child) {
     margin-right: 10px;
     }
@@ -537,7 +543,7 @@ color: var(--primery-color);
     height: 100%;
     border-radius: 4px;
     color: var(--fon-icon);
-    transition-property: border-color;
+    transition-property: fill, border, color;
     transition-duration: 250ms;
     transition-timing-function: var(--timing-function);
     }
@@ -546,7 +552,7 @@ color: var(--primery-color);
     width: 106px;
     height: 60px;
     fill: currentColor;
-    transition-property: fill;
+    transition-property: fill, border, color;
     transition-duration: 250ms;
     transition-timing-function: var(--timing-function);
     }
