--- a/css/styles.css
+++ b/css/styles.css
@@ -543,7 +543,7 @@ svg {
     height: 100%;
     border-radius: 4px;
     color: var(--fon-icon);
-    transition-property: fill, border, color;
+    transition-property: border, color;
     transition-duration: 250ms;
     transition-timing-function: var(--timing-function);
     }
@@ -552,7 +552,7 @@ svg {
     width: 106px;
     height: 60px;
     fill: currentColor;
-    transition-property: fill, border, color;
+    transition-property: border, color;
     transition-duration: 250ms;
     transition-timing-function: var(--timing-function);
     }
