--- a/css/styles.css
+++ b/css/styles.css
@@ -476,15 +476,15 @@ color: var(--primery-color);
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    transition-property: fill, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-property: background-color;
+    transition-duration: 250ms, 250ms;
+    transition-timing-function: var(--timing-function), var(--timing-function);
     }
 
 svg {
-    transition-property: fill, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-property: fill;
+    transition-duration: 250ms, 250ms;
+    transition-timing-function: var(--timing-function), var(--timing-function);
     }
 
 .command-social-style:not(:last-child) {
@@ -543,17 +543,17 @@ svg {
     height: 100%;
     border-radius: 4px;
     color: var(--fon-icon);
-    transition-property: border, color;
-    transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-property: border-color, color;
+    transition-duration: 250ms, 250ms;
+    transition-timing-function: var(--timing-function), var(--timing-function);
     }
 
 .client-icon {
     width: 106px;
     height: 60px;
     fill: currentColor;
-    transition-property: border, color;
-    transition-duration: 250ms;
+    transition-property: fill, color;
+    transition-duration: 250ms, 250ms;
     transition-timing-function: var(--timing-function);
     }
 
@@ -775,7 +775,11 @@ footer .container {
     line-height: 1.62;
     font-weight: 500;
     color: var(--title-text-colors);
-   }
+    background-color: var(--fon-color-button);
+    transition: background-color 250ms var(--timing-function),
+                color 250ms var(--timing-function),
+                box-shadow 250ms var(--timing-function);
+    }
 
 .knob:not(:last-child) {
     margin-right: 8px;
@@ -800,8 +804,7 @@ footer .container {
     }
 
 .filter-button {
-    background-color: var(--fon-color-button);
-    transition: background-color 250ms var(--timing-function);
+    
     }
 
 .filter .filter-button:hover,
